<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ThemeActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77B4D1"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity" >

    <TextView
        android:contentDescription="@string/title_desc"
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/startButton"
        android:contentDescription="@string/start_desc"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/start_button"
        android:fontFamily="serif"
        android:gravity="center"
        android:popupBackground="@android:color/transparent"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/startArrow"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/start_button"
        android:contentDescription="@string/start_desc"
        android:fontFamily="serif"
        android:gravity="center"
        android:popupBackground="@android:color/transparent"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/transition"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#A4C3D2"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>