<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#A4C3D2"
    android:id="@+id/root_layout"
    android:fillViewport="true"
    style="@style/ThemeActionBar"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/rain1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/gif_desc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heavy_rain" />

    <ImageView
        android:id="@+id/windowSheet"
        android:contentDescription="@string/rainDesc"
        android:scaleType="fitXY"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/slider_menu"
        android:layout_width="129dp"
        android:layout_height="38dp"
        android:background="@drawable/slider"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="MissingConstraints">

        <SeekBar
            android:id="@+id/volSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/volsliderDesc"
            android:progressTint="#EFEFEF"
            android:thumbTint="#EFEFEF" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="366dp"
        android:layout_height="63dp"
        android:background="@drawable/button1"
        android:foregroundGravity="center"
        android:gravity="center"
        android:layoutDirection="inherit"
        android:spinnerMode="dropdown"
        android:popupBackground="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/window" />

    <Button
        android:contentDescription="@string/rain_desc"
        android:id="@+id/window"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/windowbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87"/>

    <Button
        android:id="@+id/sound1"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/thunder"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/sound2"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/thunder"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/sound1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/sound3"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/thunder"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/sound2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/sound4"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/thunder"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/sound3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/sound5"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/thunder"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/sound4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/sound6"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/thunder"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/sound5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/transition2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/spinner"
        android:alpha="1"
        android:background="#A4C3D2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:clickable="true"
        android:contentDescription="@string/settingsDesc"
        android:focusable="true"
        android:foreground="@drawable/settings"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rain1"
        app:layout_constraintTop_toTopOf="@+id/rain1"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>